# simd-timeseries-benchmar

simd-timeseries-benchmark/: .gitignore  Cargo.toml  README.md
simd-timeseries-benchmark/.github/workflows/: ci.yml
simd-timeseries-benchmark/benches/: criterion_benchmarks.rs
simd-timeseries-benchmark/examples/: basic_usage.rs  performance_comparison.rs
simd-timeseries-benchmark/src/: lib.rs
simd-timeseries-benchmark/src/benchmarks/: ai_workload.rs  docker_example.rs  finance.rs  mod.rs  video_encode.rs
simd-timeseries-benchmark/src/gpu/: mod.rs  opencl.rs
simd-timeseries-benchmark/src/models/: informer.rs  mlp_window.rs  mod.rs  tft.rs  timesnet.rs
simd-timeseries-benchmark/src/ops/: activation.rs  attention.rs  conv1d.rs  matmul.rs  mod.rs
simd-timeseries-benchmark/src/simd/: avx2.rs  avx512.rs  fallback.rs  mod.rs
